--- a/package.json
+++ b/package.json
@@ -1,17 +1,31 @@
 {
   "name": "restaurant-menu",
   "version": "1.0.0",
-  "main": "server.js",
-  "type": "module",
+  "description": "Online restaurant menu app",
+  "main": "server.cjs",
+  "type": "commonjs",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.cjs",
+    "dev": "nodemon server.cjs"
   },
   "dependencies": {
-    "dotenv": "^16.4.5",
-    "express": "^4.19.2",
+    "dotenv": "^16.3.1",
+    "ejs": "^3.1.9",
+    "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
-    "mongoose": "^7.6.3",
-    "body-parser": "^1.20.2",
-    "cors": "^2.8.5"
-  }
+    "mongoose": "^7.3.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
+  },
+  "engines": {
+    "node": ">=22.0.0"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Shaxriyor16/Chashmai-Nur"
+  },
+  "keywords": ["restaurant", "menu", "node", "express", "mongodb"],
+  "author": "Shaxriyor",
+  "license": "MIT"
 }
