--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://sattarovshaxriyor20_db_user:Sattarov2009@cluster0.xxxxx.mongodb.net/foodsDB
+mongodb+srv://crazyshaxgamerpubg2009:Sattarov2009@cluster0.abcde.mongodb.net/restaurant?retryWrites=true&w=majority
 ADMIN_PHONE=+998996479888
 ADMIN_PASS=Fi132607
 
