--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-mongodb+srv://crazyshaxgamerpubg2009:Sattarov2009@cluster0.abcde.mongodb.net/restaurant?retryWrites=true&w=majority
-ADMIN_PHONE=+998996479888
-ADMIN_PASS=Fi132607
-PORT=1000
+PORT=10000
+MONGO_URI=mongodb+srv://crazyshaxgamerpubg2009:Sattarov2009@cluster0.xxxxx.mongodb.net/restaurantDB?retryWrites=true&w=majority
