--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-PORT=10000
-MONGO_URI=mongodb+srv://crazyshaxgamerpubg2009:Sattarov2009@cluster0.xxxxx.mongodb.net/restaurantDB?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/restaurant?retryWrites=true&w=majority
+ADMIN_USERNAME=crazyshaxgamerpubg2009
+ADMIN_PASSWORD=Sattarov2009
